actually update config